--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ rel="stylesheet">
     
     <iframe width="560" height="315"
 
-src="https://youtu.be/USxAoUwhN1k?si=oYLQHFJ_-3mEaoGh"
+src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
 
 title="YouTube video player" frameborder="0"
 
@@ -58,7 +58,7 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <div class="categoria-videos">
 
-<a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+<a href="https://youtu.be/USxAoUwhN1k?si=oYLQHFJ_-3mEaoGh">
 
 <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
 
