--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <div class="categoria-videos">
 
-<a href="https://youtu.be/USxAoUwhN1k?si=oYLQHFJ_-3mEaoGh">
+<a href="https://m.youtube.com/watch?v=gsuR94O8mNU&pp=ygUXbGFuY2FtZW50b3MgMjAyNCBmaWxtZXM%3D">
 
-<img src="https://img.youtube.com/vi/oYLQHFJ/maxresdefault.jpg" />
+<img src="https://img.youtube.com/vi/gsuR94O8mNU/maxresdefault.jpg" />
 
 </a>
 
